# kartothek

./: .codecov.yml  .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGES.rst  CONTRIBUTING.md  LICENSE.txt  README.md  README.rst  compile_requirements.sh  conda-requirements.txt  conda-test-requirements.txt  format_code.sh  integration_requirements.txt  mypy.ini  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py  test-requirements.in  test-requirements.txt
.github/: issue_template.md  pull_request_template.md
.github/workflows/: ci-pre-commit.yml  ci.yml  docs.yml
asv_bench/: asv.conf.json
asv_bench/benchmarks/: config.py  filter.py  index.py  metapartition.py  predicate_pushdown.py  schema.py  write.py
ci/: before_install.sh  before_script.sh  check_format.sh  compile_requirements.sh  format_code.sh  get_pyarrow_nightly.py  nightlies_install.sh  numpy_pandas_requirements.txt  pyarrow_requirements.txt  set_numpy_pandas_integration.sh  set_pyarrow_integration.sh
docs/: .gitignore  api.rst  changes.rst  conf.py  environment-docs.yml  further_useful_features.rst  getting_started.rst  index.rst  requirements.txt  versioning.rst
docs/guide/: dask_indexing.rst  examples.rst  further_useful_features.rst  getting_started.rst  mutating_datasets.rst  partitioning.rst
docs/io/: examples.rst  extending.rst  index.rst
docs/spec/: efficient_querying.rst  format_specification.rst  index.rst  indexing.rst  parallel_dask.rst  partition_indices.rst  predicate_pushdown.rst  serialization.rst  storage_layout.rst  store_interface.rst  type_system.rst
kartothek/: __init__.py
tests/: conftest.py  test_docs.py  test_modules.py
(+254 files in other folders)
