[metadata]
license_files = LICENSE.txt

[tool:pytest]
addopts =
    --cov kartothek
    --cov-report xml
    --cov-report html

filterwarnings =
    once::DeprecationWarning
    once::PendingDeprecationWarning
    ignore:.*(Generated\sarray\selement).*:FutureWarning:hypothesis.extra.numpy

[aliases]
docs = build_sphinx

[build_sphinx]
builder = doctest,html
source_dir = docs
build_dir = docs/_build
warning-is-error = 1
