[metadata]
license_files = LICENSE.txt

[tool:pytest]
addopts =
    --strict-markers

filterwarnings =
    once::DeprecationWarning
    once::PendingDeprecationWarning
    ignore:.*(Generated\sarray\selement).*:FutureWarning:hypothesis.extra.numpy
    ignore:.*(RangeIndex.*\sis\sdeprecated).*:DeprecationWarning:pyarrow.pandas_compat

markers =
    min_metadata_version(version): specify minimum metadata version this test applies to

[aliases]
docs = build_sphinx

[build_sphinx]
builder = doctest,html
source_dir = docs
build_dir = docs/_build
warning-is-error = 1
