[metadata]
license_files = LICENSE.txt

[tool:pytest]
addopts =
    --strict-markers

filterwarnings =
    once::DeprecationWarning
    once::PendingDeprecationWarning
    ignore:.*(Generated\sarray\selement).*:FutureWarning:hypothesis.extra.numpy

markers =
    min_metadata_version(version): specify minimum metadata version this test applies to

[aliases]
docs = build_sphinx

[build_sphinx]
builder = doctest,html
source_dir = docs
build_dir = docs/_build
# Revert to 1 in Kartothek 6.0! This excepts the newly added deprecation warnings for the migration effort.
warning-is-error = 0
